Fix combo box text spacing

--- a/front-end/src/ComboBoxSearchBar.css
+++ b/front-end/src/ComboBoxSearchBar.css
@@ -10,7 +10,7 @@
 }
 
 .icon {
-    margin-right: -4px;
+    margin-right: -2px;
 }
 
 .iconCell {
